<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">沃享健康</string>
    <!-- 验证码开始 -->
    <string name="get_code_latter">%1$ds</string>
    <string name="user_send_code">发送验证码</string>
    <!-- 验证码结束 -->
    <string name="message_notification">消息提醒</string>
    <string name="health_records">健康记录</string>
    <string name="warning_remind">预警提醒</string>
    <string name="sport_record">运动记录</string>
    <string name="food_record">饮食记录</string>
    <string name="check_record">检查记录</string>
    <string name="report_vr">智能分析</string>
    <string name="tools">小工具</string>
    <string name="knowledge">知识库</string>
    <string name="please_enter">请输入</string>
    <string name="please_choose_time">请选择时间</string>
    <string name="save_ok">保存成功</string>
    <string name="note">选择备注说明</string>
    <string name="pharmacy_name">药品名称</string>
    <string name="sport_time">运动时间</string>
    <string name="sugar_value">糖化值</string>
    <string name="check_time">检测时间</string>
    <string name="blood_warning">血压预警</string>
    <string name="sugar_warning">血糖预警</string>
    <string name="health_add">添加</string>
    <string name="start_date">选择开始时间</string>
    <string name="end_date">选择结束时间</string>
    <string name="depid_choose">科室选择</string>
    <string name="hospital_contents">医院简介</string>
    <string name="add_doctor">添加医生</string>
    <string name="specialty">擅长：</string>
    <string name="ask_doctor">问题咨询</string>
    <string name="doctor_advice">医生建议</string>
    <string name="doctor_details">医生详情</string>
    <string name="follow_management">随访管理</string>
    <string name="make_hospital">预约住院</string>
    <string name="make_details">预约详情</string>
    <string name="department_sign">科室公告</string>
    <string name="sign">科室公告</string>
    <string name="sign_details">公告详情</string>

    <string name="make_hos_type">住院类型</string>
    <string name="make_hos_nickname">患者名称</string>
    <string name="make_hos_age">患者年龄</string>
    <string name="make_hos_sex">患者性别</string>
    <string name="make_hos_phone">联系电话</string>
    <string name="make_hos_diagnosis">疾病诊断</string>
    <string name="make_hos_stay">住院目的</string>
    <string name="make_hos_updata">上传病例资料</string>
    <string name="make_hos_time">预约住院时间</string>
    <string name="content">请认真完成下方内容填写</string>
    <string name="submit">提交</string>

    <string name="blood_report">血压分析报告</string>
    <string name="account_management">账号管理</string>
    <string name="personalized">个性化降压方案</string>


    <string name="save">保存</string>

    <string name="total_weight">重量: %1$sg</string>
    <string name="weight_chart">体重: %1$sKg</string>
    <string name="sport_detail_chart_view">%1$s: 消耗热量%2$sKcal</string>


    <string name="my_treat_plan_detail">\t\t\t\t建议您长期坚持生活方式干预，即“健康生活方式六部曲”:限盐减重多运动，戒烟限酒心态平。
        通过这些生活方式干预，不但能明显降低血压，也可预防心血管疾病</string>

    <!--药品详情开始-->
    <string name="medicine_use">[&#8194;用&#12288;法&#8194;]</string>
    <string name="medicine_indication">[&#8194;适用症&#8194;]</string>
    <string name="medicine_contraindication">[&#8194;禁忌症&#8194;]</string>
    <!--药品详情结束-->

    <!--控糖报告开始-->
    <string name="sugar_desc">此份为%1$s年%2$s月份的控糖报告（%3$s型糖尿病），系沃享健康以您记录在%4$s-%5$s期间的数据为依据分析生成，仅供参考，不作为诊疗依据。</string>
    <string name="sugar_control_target">您近期共检测糖化血红蛋白%1$s次，达标%2$s次，未达标%3$s次。</string>
    <string name="month_sugar_desc">您本月测量了%1$s次血糖，其中%2$s次正常，%3$s次偏高，%4$s次偏低。</string>

    <string name="blood_sugar_desc">本月共测量%1$s次%2$s血糖，其中%3$s次正常，%4$s次偏高，%5$s次偏低。最高为%6$smmol/L，最低为%7$smmol/L。</string>

    <!--控糖报告结束-->

    <!--网络开始-->
    <!--网络结束-->

    <!--新登录开始-->
    <!--新登录结束-->

    <!-- 升级对话框 -->
    <string name="update_app">升级</string>

    <!--升级对话框-->

    <!--BMI简介-->
    <string name="BMI_index">BMI指数：(即身体质量指数，简称体质指数又称体重，英文为Body Mass Index，简称BMI）是用体重公斤数除以身高米数平方得出的数字，是目前国际上常用的衡量人体胖瘦程度 以及是否健康的一个标准。</string>
    <string name="BMI_formula">BMI=体重（kg）÷身高（m²）</string>
    <string name="low_weight">低体重：BMI&lt;18.5</string>
    <string name="normal_weight">正常体重：18.5&lt;=BMI&lt;=24.9</string>
    <string name="over_height">超重：25.0&lt;=BMI&lt;=29.9</string>
    <string name="fat">肥胖：BMI>=30.0</string>
    <!--BMI简介-->

    <!--快速问诊-->
    <!--快速问诊-->

    <!--随访-->
    <string name="please_input_one">请填写%1$s~%2$s日的</string>
    <string name="please_input_two">检测信息并在%1$s日24点前完成提交</string>
    <!--随访-->

    <!--饮食之食材库-->
    <string name="food_material_weight">重量:(%1$sg)</string>
    <string name="food_material_kcal">热量:%1$s大卡</string>
    <string name="green_weight_kcal">（%1$sg；%2$skcal）</string>
    <!--饮食之食材库-->

    <!--签约协议-->
    <string name="agreement_title_one">【一】协议服务内容</string>
    <string name="agreement_content_one">
        \t\t甲、乙双方本着平等、尊重和自愿的原则，签订此协议，甲方作为服务的提供者，向乙方及其家庭成员提供以下服务项目:\n
        \t\t•1.基本医疗服务; 2.国家基本公共卫生服务项目; 3.个性化健康管理服务; 4.个性化慢病管理服务\n
        \t\t•签约服务优惠政策。</string>
    <string name="agreement_title_two">【二】权力和义务</string>
    <string name="agreement_content_two">
        \t\t•签约机构主要权利和义务：及时获得签约居民真实信息，提供电话接听服务，指导和协助签约居民开展自我健康管理；提供“面对面”个性化健康指导；开展健康教育讲座；不能解决的疑难疾病提供双向转诊服务。\n
        \t\t•签约居民主要权利和义务：享受签约约定服务；享受政策规定的优惠措施；积极配合签约医生或团队开展履约工作，并保证沟通顺畅；按照签约医生的意见接受首诊，如实向签约医生反映自身的健康问题并接受健康管理建议。
        </string>
    <string name="agreement_title_three">【三】权力和义务</string>
    <string name="agreement_content_three">
        \t\t•本协议未尽事宜由甲乙双方协商解决；\n
        \t\t•本电子协议书一式三份，城市社区:社区卫生服务机构、家庭医生、签约居民各执一份；农村地区：乡镇卫生院、村卫生室、签约居民各执一份，自双方签字之日起生效，有效期为一年。期满后如需解约，乙方需告知甲方，双方签字确认。不提出解约者，视为自动续约。</string>
    <!--签约协议-->


</resources>
